<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/menu_bar_vertical_offset"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add_profile_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/peach_contrast_translucent"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/add_profile_photo"
        android:textColor="@color/cold_grey_light"
        android:textSize="20sp"
        android:visibility="gone"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@id/image_view_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_profile"
        tools:visibility="visible" />


    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corner_profile_page"
        android:clickable="false"

        android:digits="@string/accepted_name_chars"
        android:enabled="false"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/plum_dark"
        android:textColorHint="@color/mauve_medium_light"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_phone"
        app:layout_constraintEnd_toStartOf="@id/edit_text_last_name"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/edit_text_phone"
        app:layout_constraintTop_toBottomOf="@+id/image_view_profile"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_corner_profile_page"
        android:clickable="false"
        android:digits="@string/accepted_name_chars"

        android:enabled="false"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/plum_dark"
        android:textColorHint="@color/mauve_medium_light"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="@+id/edit_text_first_name"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_phone"
        app:layout_constraintStart_toEndOf="@id/edit_text_first_name"
        app:layout_constraintTop_toTopOf="@+id/edit_text_first_name" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_profile_page"
        android:clickable="false"

        android:enabled="false"
        android:fontFamily="@font/helvetica_regular"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/plum_dark"
        android:textColorHint="@color/mauve_medium_light"

        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_first_name" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_profile_page"
        android:clickable="false"

        android:enabled="false"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/plum_dark"
        android:textColorHint="@color/mauve_medium_light"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>
