<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/camera_open"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/take_photo" />
    <item
        android:id="@+id/gallery_open"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/choose_from_gallery" />
    <item
        android:id="@+id/remove_current_photo"
        android:icon="@drawable/profile_icon"
        android:title="@string/remove_photo" />
</menu>