...
            android:layout_marginVertical="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_iv_poster">

            <EditText
                android:id="@+id/et_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_r"
                android:fontFamily="@font/helvetica_bold"
                android:hint="@string/event_name"
                android:paddingHorizontal="15dp"
...
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_edit_event_endDate"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_event_startTime" />

            <EditText
                android:id="@+id/et_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/rounded_corners_r"
                android:fontFamily="@font/helvetica"
                android:hint="@string/location"
...
